--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/services/minimal_service
-	base = 76401915
-	trimbase = 
+	base = 9b9a9e01
+	trimbase = 76401915
 	parent = upstream
 	previous = 90df5e62
