--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/services/minimal_client
-	base = 7369ed40
-	trimbase = 
+	base = 6d0dac5b
+	trimbase = 7369ed40
 	parent = upstream
 	previous = 90df5e62
