--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/executors/multithreaded_executor
-	base = 97cd554a
-	trimbase = 
+	base = caf9e9cf
+	trimbase = 97cd554a
 	parent = upstream
 	previous = 90df5e62
