--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/composition/minimal_composition
-	base = 13ab7bf7
-	trimbase = 
+	base = 82c986b6
+	trimbase = 13ab7bf7
 	parent = upstream
 	previous = 90df5e62
