--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/actions/minimal_action_server
-	base = 42b8229a
-	trimbase = 
+	base = 504b67f6
+	trimbase = 42b8229a
 	parent = upstream
 	previous = 90df5e62
