--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/actions/minimal_action_client
 	base = 7f98954c
-	trimbase = f041611b
+	trimbase = 
 	parent = upstream
 	previous = a2309e9b
