--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/actions/minimal_action_client
-	base = b784f510
-	trimbase = 
+	base = 85ac6dc6
+	trimbase = b784f510
 	parent = upstream
 	previous = 90df5e62
