--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/services/minimal_service
-	base = ac3882b8
-	trimbase = 
+	base = 6d0859c2
+	trimbase = ac3882b8
 	parent = upstream
 	previous = a3d737d9
