--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/services/minimal_client
-	base = 5366484f
-	trimbase = 
+	base = 0fbcaeb7
+	trimbase = 5366484f
 	parent = upstream
 	previous = a3d737d9
