--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_subscriber
-	base = d33bc6f6
-	trimbase = 
+	base = 384e1fe2
+	trimbase = d33bc6f6
 	parent = upstream
 	previous = a3d737d9
