--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/timers/minimal_timer
-	base = 9636d851
-	trimbase = 
+	base = 387fe117
+	trimbase = 9636d851
 	parent = upstream
 	previous = a3d737d9
