--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/composition/minimal_composition
-	base = b48947b6
-	trimbase = 
+	base = 244ac6b4
+	trimbase = b48947b6
 	parent = upstream
 	previous = a3d737d9
