--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/executors/multithreaded_executor
-	base = 7c3666e7
-	trimbase = 
+	base = b995efff
+	trimbase = 7c3666e7
 	parent = upstream
 	previous = a3d737d9
