--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
-	base = 7be84d4f
-	trimbase = 
+	base = e02fd533
+	trimbase = 7be84d4f
 	parent = upstream
 	previous = a3d737d9
