--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
-	base = 9d707fd6
-	trimbase = 
+	base = b635481a
+	trimbase = 9d707fd6
 	parent = upstream
 	previous = a3d737d9
