--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
-	base = 180df19e
-	trimbase = 
+	base = b2301c6f
+	trimbase = 180df19e
 	parent = upstream
 	previous = a3d737d9
