--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/executors
-	base = 3cf56c4f
-	trimbase = 
+	base = 00103e64
+	trimbase = 3cf56c4f
 	parent = upstream
 	previous = a3d737d9
