--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.9.2": ["Jacob Hassold", "jhassold@dcscorp.com"], "0.9.1": ["Jacob Hassold", "jhassold@dcscorp.com"], "0.9.0": ["Jacob Hassold", "jhassold@dcscorp.com"], "0.8.2": ["Jacob Hassold", "jhassold@dcscorp.com"], "0.8.1": ["Jacob Hassold", "jhassold@dcscorp.com"]}
+{"0.9.3": ["Jacob Hassold", "jhassold@dcscorp.com"], "0.9.2": ["Jacob Hassold", "jhassold@dcscorp.com"], "0.9.1": ["Jacob Hassold", "jhassold@dcscorp.com"], "0.9.0": ["Jacob Hassold", "jhassold@dcscorp.com"], "0.8.2": ["Jacob Hassold", "jhassold@dcscorp.com"], "0.8.1": ["Jacob Hassold", "jhassold@dcscorp.com"]}
