--- a/rclcpp/actions/minimal_action_server/CMakeLists.txt
+++ b/rclcpp/actions/minimal_action_server/CMakeLists.txt
@@ -27,6 +27,11 @@ ament_target_dependencies(action_server_not_composable
   "rclcpp_action"
   "example_interfaces")
 
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+endif()
+
 install(TARGETS
   action_server_not_composable
   action_server_member_functions
