--- a/rclcpp/topics/minimal_publisher/CMakeLists.txt
+++ b/rclcpp/topics/minimal_publisher/CMakeLists.txt
@@ -30,4 +30,9 @@ install(TARGETS
   DESTINATION lib/${PROJECT_NAME}
 )
 
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+endif()
+
 ament_package()
