--- a/rclcpp/executors/multithreaded_executor/package.xml
+++ b/rclcpp/executors/multithreaded_executor/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>examples_rclcpp_multithreaded_executor</name>
-  <version>0.9.3</version>
+  <version>0.10.0</version>
   <description>Package containing example of how to implement a multithreaded executor</description>
   <maintainer email="jhassold@dcscorp.com">Jacob Hassold</maintainer>
   <license>Apache License 2.0</license>
@@ -14,6 +14,9 @@
 
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
      <build_type>ament_cmake</build_type>
