--- a/rclcpp/actions/minimal_action_server/package.xml
+++ b/rclcpp/actions/minimal_action_server/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>examples_rclcpp_minimal_action_server</name>
-  <version>0.9.2</version>
+  <version>0.10.0</version>
   <description>Minimal action server examples</description>
   <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
   <license>Apache License 2.0</license>
@@ -14,8 +14,10 @@
   <depend>rclcpp</depend>
   <depend>rclcpp_action</depend>
 
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
 </package>
-
