--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/services/minimal_service
-	base = b19d6769
-	trimbase = 
+	base = 06806ddb
+	trimbase = b19d6769
 	parent = upstream
 	previous = d93ba43a
