--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/services/minimal_client
-	base = 383015e9
-	trimbase = 
+	base = 3d93f813
+	trimbase = 383015e9
 	parent = upstream
 	previous = d93ba43a
