--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/actions/minimal_action_server
-	base = 84c458c3
-	trimbase = 
+	base = 36ae838f
+	trimbase = 84c458c3
 	parent = upstream
 	previous = d93ba43a
