--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/actions/minimal_action_client
-	base = 519c70e5
-	trimbase = 
+	base = 695c3e77
+	trimbase = 519c70e5
 	parent = upstream
 	previous = d93ba43a
