--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_publisher
-	base = 9daa8788
-	trimbase = 
+	base = 6f94c7b4
+	trimbase = 9daa8788
 	parent = upstream
 	previous = d93ba43a
