--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_subscriber
-	base = 74b406eb
-	trimbase = 
+	base = 2cb6c8a6
+	trimbase = 74b406eb
 	parent = upstream
 	previous = d93ba43a
