--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/timers/minimal_timer
 	base = 96231a34
-	trimbase = 57fdce9a
+	trimbase = 
 	parent = upstream
 	previous = 90df5e62
