--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/timers/minimal_timer
-	base = 1740253a
-	trimbase = 
+	base = bfb7a7b5
+	trimbase = 1740253a
 	parent = upstream
 	previous = d93ba43a
