--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/composition/minimal_composition
-	base = 719da730
-	trimbase = 
+	base = bef3fa8b
+	trimbase = 719da730
 	parent = upstream
 	previous = d93ba43a
