--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/executors/multithreaded_executor
-	base = 36bc852e
-	trimbase = 
+	base = 78b4827a
+	trimbase = 36bc852e
 	parent = upstream
 	previous = d93ba43a
