--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
-	base = aa3e2813
-	trimbase = 
+	base = 54ccbe6d
+	trimbase = aa3e2813
 	parent = upstream
 	previous = d93ba43a
