--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
-	base = c711177e
-	trimbase = 
+	base = 14a86575
+	trimbase = c711177e
 	parent = upstream
 	previous = d93ba43a
