--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
 	base = a9d07cb0
-	trimbase = 3a010499
+	trimbase = 
 	parent = upstream
 	previous = 90df5e62
