--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
-	base = fed5bb89
-	trimbase = 
+	base = fe00dc2b
+	trimbase = fed5bb89
 	parent = upstream
 	previous = d93ba43a
