--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
 	base = 69465c73
-	trimbase = ff0b779c
+	trimbase = 
 	parent = upstream
 	previous = 90df5e62
