--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
-	base = 8d88e285
-	trimbase = 
+	base = 43c7dfbf
+	trimbase = 8d88e285
 	parent = upstream
 	previous = d93ba43a
