--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
 	base = 0f292d24
-	trimbase = d9d01cb9
+	trimbase = 
 	parent = upstream
 	previous = 90df5e62
