--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
-	base = 0d6c34cf
-	trimbase = 
+	base = 82fcdc2a
+	trimbase = 0d6c34cf
 	parent = upstream
 	previous = d93ba43a
