--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
-	base = dcb72de4
-	trimbase = 
+	base = 542cc70f
+	trimbase = dcb72de4
 	parent = upstream
 	previous = d93ba43a
