--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/executors
-	base = ffe53c10
-	trimbase = 
+	base = 34dcaa67
+	trimbase = ffe53c10
 	parent = upstream
 	previous = d93ba43a
