--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d93ba43a
-	base = 97c51ab0
-	trim = 
-	trimbase = 
+	base = bb78bbb3
+	trim = rclpy/guard_conditions
+	trimbase = 97c51ab0
