--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,4 +21,10 @@ install(TARGETS
   multithreaded_executor
   DESTINATION lib/${PROJECT_NAME}
 )
+
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+endif()
+
 ament_package()
