--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/examples_rclpy_guard_conditions
-	previous = 
-	base = bb78bbb3
+	previous = bb78bbb3
+	base = 5edb6106
 	trim = 
 	trimbase = 
