--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/examples_rclpy_guard_conditions
-	previous = 
-	base = aee0f2e9
+	previous = aee0f2e9
+	base = 11cc2011
 	trim = 
 	trimbase = 
