--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
 	base = 917202e
-	trimbase = 451c440
+	trimbase = 
 	parent = upstream
 	previous = 408c800
