--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
-	base = a4be3538
-	trimbase = 
+	base = 9dec8315
+	trimbase = a4be3538
 	parent = upstream
 	previous = 0d9bcda0
