--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
-	base = dcc03adb
-	trimbase = 
+	base = b07b63c1
+	trimbase = dcc03adb
 	parent = upstream
 	previous = 0d9bcda0
