--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
-	base = f3f1c8dc
-	trimbase = 
+	base = 38072324
+	trimbase = f3f1c8dc
 	parent = upstream
 	previous = 0d9bcda0
