--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/executors
-	base = 92689933
-	trimbase = 
+	base = 904fff6c
+	trimbase = 92689933
 	parent = upstream
 	previous = 0d9bcda0
