--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
 	base = ab91a78
-	trimbase = 9325f0c
+	trimbase = 
 	parent = upstream
 	previous = 408c800
