--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
-	base = ae0aa9f6
-	trimbase = 
+	base = 8134fca9
+	trimbase = ae0aa9f6
 	parent = upstream
 	previous = 0d9bcda0
