--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
 	base = 501f7de
-	trimbase = 4c3d201
+	trimbase = 
 	parent = upstream
 	previous = 408c800
