--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_timer
 	base = 09e181e
-	trimbase = 6815a6b
+	trimbase = 
 	parent = upstream
 	previous = 408c800
