--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_timer
-	base = 727eb692
-	trimbase = 
+	base = 98b0beca
+	trimbase = 727eb692
 	parent = upstream
 	previous = 0d9bcda0
