--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_subscriber
 	base = 86a5b53
-	trimbase = e718c67
+	trimbase = 
 	parent = upstream
 	previous = 408c800
