--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_subscriber
-	base = 7d21c076
-	trimbase = 
+	base = 9dcb4ec4
+	trimbase = 7d21c076
 	parent = upstream
 	previous = 0d9bcda0
