--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_service
 	base = 9eaccc0
-	trimbase = 63208ba
+	trimbase = 
 	parent = upstream
 	previous = 408c800
