--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_service
-	base = 342d0b8f
-	trimbase = 
+	base = 56e7a24c
+	trimbase = 342d0b8f
 	parent = upstream
 	previous = 0d9bcda0
