--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_publisher
-	base = 220423cd
-	trimbase = 
+	base = 82dd8227
+	trimbase = 220423cd
 	parent = upstream
 	previous = 0d9bcda0
