--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_composition
-	base = 1a254d6f
-	trimbase = 
+	base = 5562123d
+	trimbase = 1a254d6f
 	parent = upstream
 	previous = 0d9bcda0
