--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_client
-	base = a149aed6
-	trimbase = 
+	base = 564d6a44
+	trimbase = a149aed6
 	parent = upstream
 	previous = 0d9bcda0
