--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_server
 	base = 00a2781
-	trimbase = d46eb81
+	trimbase = 
 	parent = upstream
 	previous = 408c800
