--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_server
-	base = ff29ee99
-	trimbase = 
+	base = 94e28c9c
+	trimbase = ff29ee99
 	parent = upstream
 	previous = 0d9bcda0
