--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_client
 	base = 27118ee
-	trimbase = bbac862
+	trimbase = 
 	parent = upstream
 	previous = 408c800
