--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,4 +29,9 @@ install(TARGETS
   subscriber_not_composable
   DESTINATION lib/${PROJECT_NAME})
 
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+endif()
+
 ament_package()
