--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>examples_rclcpp_minimal_composition</name>
-  <version>0.7.4</version>
+  <version>0.7.5</version>
   <description>Minimalist examples of composing nodes in the same
   process</description>
   <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
@@ -19,6 +19,9 @@
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>rclcpp_components</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
