--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
 	base = 6e4ffdb8
-	trimbase = eb6347d2
+	trimbase = 
 	parent = upstream
 	previous = 0d9bcda0
