--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
-	base = 3c9aaddc
-	trimbase = 
+	base = b00e5322
+	trimbase = 3c9aaddc
 	parent = upstream
 	previous = 0d9bcda0
