--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
-	base = 8f57cb2f
-	trimbase = 
+	base = b7af03ed
+	trimbase = 8f57cb2f
 	parent = upstream
 	previous = 0d9bcda0
