--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
 	base = b07b63c1
-	trimbase = dcc03adb
+	trimbase = 
 	parent = upstream
 	previous = 0d9bcda0
