--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
-	base = 8589b99f
-	trimbase = 
+	base = c23f3d66
+	trimbase = 8589b99f
 	parent = upstream
 	previous = 0d9bcda0
