--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
-	base = 7e40dd3a
-	trimbase = 
+	base = fa3807ce
+	trimbase = 7e40dd3a
 	parent = upstream
 	previous = 0d9bcda0
