--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/executors
-	base = 1eb2de17
-	trimbase = 
+	base = ed95fa3a
+	trimbase = 1eb2de17
 	parent = upstream
 	previous = 0d9bcda0
