--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
-	base = 73584592
-	trimbase = 
+	base = d0949159
+	trimbase = 73584592
 	parent = upstream
 	previous = 0d9bcda0
