--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
 	base = b9748090
-	trimbase = 72661bae
+	trimbase = 
 	parent = upstream
 	previous = 0d9bcda0
