--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
-	base = 32cf9d6d
-	trimbase = 
+	base = a396493d
+	trimbase = 32cf9d6d
 	parent = upstream
 	previous = 0d9bcda0
