--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_timer
 	base = 98b0beca
-	trimbase = 727eb692
+	trimbase = 
 	parent = upstream
 	previous = 0d9bcda0
