--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_timer
-	base = bbe686c9
-	trimbase = 
+	base = 22fc76a6
+	trimbase = bbe686c9
 	parent = upstream
 	previous = 0d9bcda0
