--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_subscriber
-	base = 835520dd
-	trimbase = 
+	base = a693bc12
+	trimbase = 835520dd
 	parent = upstream
 	previous = 0d9bcda0
