--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_service
-	base = e81db536
-	trimbase = 
+	base = 518b1be9
+	trimbase = e81db536
 	parent = upstream
 	previous = 0d9bcda0
