--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_publisher
-	base = b5f07ad5
-	trimbase = 
+	base = 3f4e4b63
+	trimbase = b5f07ad5
 	parent = upstream
 	previous = 0d9bcda0
