--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_composition
-	base = be64b2a0
-	trimbase = 
+	base = a3349b4f
+	trimbase = be64b2a0
 	parent = upstream
 	previous = 0d9bcda0
