--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_client
-	base = 6374ff30
-	trimbase = 
+	base = b59887bd
+	trimbase = 6374ff30
 	parent = upstream
 	previous = 0d9bcda0
