--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_server
-	base = 3d76e6d5
-	trimbase = 
+	base = 54c9308e
+	trimbase = 3d76e6d5
 	parent = upstream
 	previous = 0d9bcda0
