--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_client
 	base = ca778b00
-	trimbase = 49164873
+	trimbase = 
 	parent = upstream
 	previous = 0d9bcda0
