--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_client
-	base = ad6305fc
-	trimbase = 
+	base = 9b3b197e
+	trimbase = ad6305fc
 	parent = upstream
 	previous = 0d9bcda0
