--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = 31f71cb2
+	base = 297df557
 	trim = rclpy/topics/minimal_publisher
-	trimbase = 
+	trimbase = 31f71cb2
