--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = 3054a7bc
+	base = 32fe68ef
 	trim = rclpy/topics/minimal_subscriber
-	trimbase = 
+	trimbase = 3054a7bc
