--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = ed769a5e
+	base = 064b3d88
 	trim = rclpy/services/minimal_service
-	trimbase = 
+	trimbase = ed769a5e
