--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = 9171315b
+	base = 7b7542a7
 	trim = rclpy/services/minimal_client
-	trimbase = 
+	trimbase = 9171315b
