--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = 47bc06d2
+	base = c5910192
 	trim = rclpy/executors
-	trimbase = 
+	trimbase = 47bc06d2
