--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = 07b03815
+	base = 6225cba7
 	trim = rclpy/actions/minimal_action_client
-	trimbase = 
+	trimbase = 07b03815
