--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = e9dbef91
+	base = 6a98cc05
 	trim = rclpy/actions/minimal_action_server
-	trimbase = 
+	trimbase = e9dbef91
