--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = 02c2d5f7
+	base = c75a8668
 	trim = rclcpp/minimal_timer
-	trimbase = 
+	trimbase = 02c2d5f7
