--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = 515ba7ce
+	base = 2cb3e9b6
 	trim = rclcpp/minimal_service
-	trimbase = 
+	trimbase = 515ba7ce
