--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/multithreaded_executor
-	base = 63503f82
-	trimbase = 
+	base = 028801c7
+	trimbase = 63503f82
 	parent = upstream
 	previous = bd62466b
