--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/multithreaded_executor
 	base = d13b4cf3
-	trimbase = 2df9445d
+	trimbase = 
 	parent = upstream
 	previous = 45990057
