--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = e46570bb
+	base = 88025e6c
 	trim = rclcpp/minimal_publisher
-	trimbase = 
+	trimbase = e46570bb
