--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = 85d1c90b
+	base = 3f87600f
 	trim = rclcpp/minimal_subscriber
-	trimbase = 
+	trimbase = 85d1c90b
