--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = 32adbf94
+	base = 44342158
 	trim = rclcpp/minimal_composition
-	trimbase = 
+	trimbase = 32adbf94
