--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = b06e8aef
+	base = 280554d0
 	trim = rclcpp/minimal_client
-	trimbase = 
+	trimbase = b06e8aef
