--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = a5dafbab
+	base = a1314d0c
 	trim = rclcpp/minimal_action_client
-	trimbase = 
+	trimbase = a5dafbab
