--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bd62466b
-	base = b407d203
+	base = f7ce1b6d
 	trim = rclcpp/minimal_action_server
-	trimbase = 
+	trimbase = b407d203
