--- a/rclcpp/services/minimal_service/package.xml
+++ b/rclcpp/services/minimal_service/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>examples_rclcpp_minimal_service</name>
-  <version>0.9.3</version>
+  <version>0.9.4</version>
   <description>A minimal service server which adds two numbers</description>
   <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
   <license>Apache License 2.0</license>
@@ -17,8 +17,10 @@
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>example_interfaces</exec_depend>
 
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
 </package>
-
