--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/executors
-	base = 24e3470e
-	trimbase = 
+	base = 8aea20af
+	trimbase = 24e3470e
 	parent = upstream
 	previous = b8a673cc
