--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
 	base = e5797065
-	trimbase = 18575058
+	trimbase = 
 	parent = upstream
 	previous = a3d737d9
