--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
-	base = d1b90236
-	trimbase = 
+	base = 8530c72b
+	trimbase = d1b90236
 	parent = upstream
 	previous = b8a673cc
