--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
 	base = e02fd533
-	trimbase = 7be84d4f
+	trimbase = 
 	parent = upstream
 	previous = a3d737d9
