--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
-	base = 40078f3f
-	trimbase = 
+	base = 278d36be
+	trimbase = 40078f3f
 	parent = upstream
 	previous = b8a673cc
