--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
 	base = b2301c6f
-	trimbase = 180df19e
+	trimbase = 
 	parent = upstream
 	previous = a3d737d9
