--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
 	base = 172721d3
-	trimbase = ea782906
+	trimbase = 
 	parent = upstream
 	previous = a3d737d9
