--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
-	base = 1962e8d8
-	trimbase = 
+	base = 3aad452b
+	trimbase = 1962e8d8
 	parent = upstream
 	previous = b8a673cc
