--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
 	base = 93d72350
-	trimbase = d1a5a84a
+	trimbase = 
 	parent = upstream
 	previous = a3d737d9
