--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
-	base = bb479402
-	trimbase = 
+	base = 405679de
+	trimbase = bb479402
 	parent = upstream
 	previous = b8a673cc
