--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
-	base = ea9ba7d0
-	trimbase = 
+	base = 40b33038
+	trimbase = ea9ba7d0
 	parent = upstream
 	previous = b8a673cc
