--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
-	base = 64471611
-	trimbase = 
+	base = 0c3a5d8d
+	trimbase = 64471611
 	parent = upstream
 	previous = b8a673cc
