--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
 	base = b635481a
-	trimbase = 9d707fd6
+	trimbase = 
 	parent = upstream
 	previous = a3d737d9
