--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/executors/multithreaded_executor
-	base = ee081035
-	trimbase = 
+	base = 97f2cefc
+	trimbase = ee081035
 	parent = upstream
 	previous = b8a673cc
