--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/executors/multithreaded_executor
 	base = b995efff
-	trimbase = 7c3666e7
+	trimbase = 
 	parent = upstream
 	previous = a3d737d9
