--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/timers/minimal_timer
-	base = acf42132
-	trimbase = 
+	base = 531d3d0d
+	trimbase = acf42132
 	parent = upstream
 	previous = b8a673cc
