--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/services/minimal_client
-	base = c4454c98
-	trimbase = 
+	base = 9bfcc486
+	trimbase = c4454c98
 	parent = upstream
 	previous = b8a673cc
