--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/services/minimal_service
 	base = 6d0859c2
-	trimbase = ac3882b8
+	trimbase = 
 	parent = upstream
 	previous = a3d737d9
