--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/services/minimal_service
-	base = 091148bf
-	trimbase = 
+	base = 67fab0af
+	trimbase = 091148bf
 	parent = upstream
 	previous = b8a673cc
