--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_publisher
 	base = 9c9af95d
-	trimbase = 3956fedd
+	trimbase = 
 	parent = upstream
 	previous = a3d737d9
