--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_publisher
-	base = cc76ed41
-	trimbase = 
+	base = ffd973a6
+	trimbase = cc76ed41
 	parent = upstream
 	previous = b8a673cc
