--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_subscriber
-	base = 048110a9
-	trimbase = 
+	base = acb967cc
+	trimbase = 048110a9
 	parent = upstream
 	previous = b8a673cc
