--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/actions/minimal_action_client
-	base = ec4ffe58
-	trimbase = 
+	base = c1334624
+	trimbase = ec4ffe58
 	parent = upstream
 	previous = b8a673cc
