--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/actions/minimal_action_client
 	base = 1bf2101a
-	trimbase = 4c101698
+	trimbase = 
 	parent = upstream
 	previous = a3d737d9
