--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/actions/minimal_action_server
 	base = 3604f39c
-	trimbase = 3c42a692
+	trimbase = 
 	parent = upstream
 	previous = a3d737d9
