--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/actions/minimal_action_server
-	base = 1159f3ec
-	trimbase = 
+	base = 5704ec9d
+	trimbase = 1159f3ec
 	parent = upstream
 	previous = b8a673cc
