--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/composition/minimal_composition
-	base = a5e419a8
-	trimbase = 
+	base = c8afabb6
+	trimbase = a5e419a8
 	parent = upstream
 	previous = b8a673cc
