--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/composition/minimal_composition
 	base = 244ac6b4
-	trimbase = b48947b6
+	trimbase = 
 	parent = upstream
 	previous = a3d737d9
